# MessageQueue

./: README.md
SKQueue/: Dispatcher.cpp  HandlerFactory.cpp  MessageQueue.cpp  ReadMe.txt  SKQueue.cpp  SKQueue.vcxproj  SKQueue.vcxproj.filters  stdafx.cpp
SKQueueTest/: HandlerOne.cpp  HandlerOne.h  ReadMe.txt  SKQueueTest.cpp  SKQueueTest.vcxproj  SKQueueTest.vcxproj.filters  stdafx.cpp
include/mq/: MessageQueue.h  SKQueue.h
libSKQueue/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  HandlerFactory.h  IHandler.h  MessageQueue.cpp  MessageQueue.h  SKQueue.cpp  SKQueue.h  main.cpp
queuetest/src/: CMakeLists.txt
queuetest/src/SKQueue/: HandlerFactory.cpp  Log.h  MessageQueue.cpp  MessageQueue.h
queuetest/src/test/: main.cpp
